--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,13 @@
 
       <title>App Name</title>
 
-      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
     <div id="app"></div>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
   </body>
 </html>
