--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
       <title>App Name</title>
-      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
   <body>
