--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
       <title>App Name</title>
       <link rel="stylesheet" href="css/fontawesome.css">
       <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/medium-editor/medium-editor.css">
+      <link rel="stylesheet" href="css/medium-editor/themes/default.css">
   </head>
   <body>
 
