--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width">
       <title>App Name</title>
-      <link rel="stylesheet" href="/css/fontawesome.css">
+      <link rel="stylesheet" href="/css/font-awesome.css">
       <link rel="stylesheet" href="/css/bootstrap.css">
       <link rel="stylesheet" href="/css/medium-editor/medium-editor.css">
       <link rel="stylesheet" href="/css/medium-editor/themes/default.css">
