--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 
     <div id="content"></div>
 
+    <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
     <script src="/js/main.js"></script>
 
   </body>
